hello-world-stack.yml
AWSTemplateFormatVersion: 2010-09-09
Description: CloudFormation Template for AtlasWebServer and
  AtlasKnowledgeEnvironment with EC2 Instances

Parameters:
  MyIP:
    Description: Your IP address in CIDR format (e.g. 203.0.113.1/32).
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: ^(\d{1,3}\.){3}\d{1,3}\/\d{1,2}$
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

Resources:
  ITSVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.236.105.0/24

  AtlasWebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP access via my IP address
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref MyIP

  KnowledgeEnvironmentSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP access via my IP address
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref MyIP

  AtlasWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-03dd3bb693a074abe
      InstanceType: t2.large
      SecurityGroupIds:
        - !Ref AtlasWebServerSecurityGroup
      KeyName: um-kpmp-2025
      UserData: !Base64 |
        #!/bin/bash
        yum update -y
        yum install -y httpd
        systemctl start httpd
        systemctl enable httpd
        echo "<html><body><h1>Hello From Cloudformation! (Atlas Webserver)</h1></body></html>" > /var/www/html/index.html

  KnowledgeEnvironment:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-08b23e1bace4f480b
      InstanceType: t2.2xlarge
      KeyName: um-kpmp-2025
      SecurityGroupIds:
        - !Ref KnowledgeEnvironmentSecurityGroup
      UserData: !Base64 |
        #!/bin/bash
        yum update -y
        yum install -y httpd
        systemctl start httpd
        systemctl enable httpd
        echo "<html><body><h1>Hello From Cloudformation! (Atlas KE)</h1></body></html>" > /var/www/html/index.html

Outputs:
  AtlasWebserverURL:
    Value: !Join
      - ''
      - - http://
        - !GetAtt AtlasWebServer.PublicDnsName
    Description: Atlas Webserver URL

  KnowledgeEnvironmentURL:
    Value: !Join
      - ''
      - - http://
        - !GetAtt KnowledgeEnvironment.PublicDnsName
    Description: KE URL
